[package]
name = "hashstorage-cli"
version = "1.0.0"
authors = ["Alexander <mail@fomalhaut.su>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"]  }
js-sys = "0.3.55"
wasm-bindgen-futures = "0.4.28"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.4"
sha2 = "0.9.8"
bigi = { git = "https://github.com/fomalhaut88/bigi.git", tag = "v1.1.0" }
bigi-ecc = { git = "https://github.com/fomalhaut88/bigi-ecc.git", tag = "v1.1.0" }
hashstorage-utils = { git = "https://github.com/fomalhaut88/hashstorage-utils.git", tag = "v1.0.0" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Storage',
  'console',
]
